# demo-simple-calc

./: README.md  demo-simple-calc.cabal
src/: SimpleCalc.hs
test/: DocTest.hs
