name:                demo-simple-calc
version:             0.1
synopsis:            Калькулятор простых арифметических выражений с переменными.
-- description:
homepage:            https://github.com/cmc-haskell-2017/demo-simple-calc#readme
license:             MIT
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2017 Nickolay Kudasov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleCalc
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/demo-simple-calc
